[tool.poetry]
name = "pycounts_rn"
version = "0.1.0"
description = "Calculate word counts in a text file!"
authors = ["Rajalakshmi Narasimhan"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
